--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
 
     <section class="main-section">
       <!-- Clear textfield Modal -->
+      <!-- Testing Netlify -->
       <div class="modal-container" id="modal">
         <div class="modal">
           <button class="close-btn" id="close" aria-label="Close">
