refactor: add link to font awesome

--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
   <meta name="twitter:description" content="A virtual keyboard to assist people with reduced fine motor skills.">
   <meta name="twitter:domain" content="https://cool-travesseiro-9b6101.netlify.app/">
   
-  <!-- Favicon and Styles -->
+  <!-- Favicon, Font Awesome, and Styles -->
   <link rel="icon" type="image/png" href="./dist/favicon.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+  integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./dist/css/style.css" />
+
 </head>
 
 <body>
@@ -189,7 +193,6 @@
 
     <section class="main-section">
       <!-- Clear textfield Modal -->
-      <!-- Testing Netlify -->
       <div class="modal-container" id="modal">
         <div class="modal">
           <button class="close-btn" id="close" aria-label="Close">
