Changed header color and footer text

--- a/notes.html
+++ b/notes.html
@@ -65,18 +65,24 @@
           <h3>General Notes:</h3>
           <ul>
             <li>This app is for people who prefer to use a mouse to write because of their motor control difficulties.
-              This app is NOT for tablets or smartphones, though I tried to make it responsive in the event you wanted to
+              This app is NOT for tablets or smartphones, though I tried to make it responsive in the event you wanted
+              to
               show someone the features or have a very small laptop monitor or a large tablet.</li>
-            <li>The text area has a clear button that will delete everything in the text field. Clicking that button opens
+            <li>The text area has a clear button that will delete everything in the text field. Clicking that button
+              opens
               a popup asking to confirm the deletion. The popup confirmation is in case you clicked the clear button by
-              accident. The text area also has a copy button to copy the contents into your clipboard. You can then paste
+              accident. The text area also has a copy button to copy the contents into your clipboard. You can then
+              paste
               the text into a document or email program.</li>
-            <li>All buttons have a change in color when you hover over them to know that you are "over the target", so to
+            <li>All buttons have a change in color when you hover over them to know that you are "over the target", so
+              to
               speak. They also turn orange when you click them.</li>
             <li>All words are designed to add a space before the word. Conversely, all characters on the keyboard do not
-              add a space, so if you will be typing out a word, use the Spacebar key on the virtual keyboard before typing
+              add a space, so if you will be typing out a word, use the Spacebar key on the virtual keyboard before
+              typing
               the word.</li>
-            <li>Clicking an alphabetical word or a phrase from the Common Phrases section automatically closes that menu.
+            <li>Clicking an alphabetical word or a phrase from the Common Phrases section automatically closes that
+              menu.
               After clicking a letter menu, you only have to hover over it to show it again. Click that letter again to
               stop that behavior.</li>
           </ul>
@@ -85,13 +91,16 @@
           <h3>Alphabetical words:</h3>
           <ul>
             <li>If you click the buttons for each letter of the alphabet, you'll see between 20 to 100+ words. I
-              added the most commonly used words that were 4 letters or greater, though for a few letters the cutoff is 3
+              added the most commonly used words that were 4 letters or greater, though for a few letters the cutoff is
+              3
               letters.</li>
-            <li>Ideally, you want long words that are most often used by the user. The list shouldn’t be so long that you
+            <li>Ideally, you want long words that are most often used by the user. The list shouldn’t be so long that
+              you
               lose time searching for a word that is not in there because you can’t remember a list of 100 words per
               letter. Shorter is probably better.</li>
             <li>Depending on the number of words you upload or the size of your monitor, you may not always see the text
-              entered in the text box because the mega menu will block part of the text field. Don’t worry, if you click a
+              entered in the text box because the mega menu will block part of the text field. Don’t worry, if you click
+              a
               word and can’t see the text box - it will be added.</li>
           </ul>
           <hr />
@@ -107,15 +116,18 @@
             click changes like the buttons above. There is full functionality for the non-character keys: Backspace,
             Delete, Tab, Caps, Enter, Shift, and Spacebar.</p>
           <ul>
-            <li>I omitted the Insert key as I find it an annoyance rather than a helpful key. I also moved the Delete key
+            <li>I omitted the Insert key as I find it an annoyance rather than a helpful key. I also moved the Delete
+              key
               to the main keyboard section.</li>
             <li>Place your cursor anywhere in the text field to add any of the words or characters, or to use the keys
               like Delete, Enter,
               or the arrow keys. You can also insert words or phrases at the location of your cursor.</li>
             <li>I have the Ctrl and Alt keys disabled as they are not needed for basic email or document writing. I also
-              hid the buttons for arrow up, page up, arrow down, and page down as I don’t think they are needed, though I
+              hid the buttons for arrow up, page up, arrow down, and page down as I don’t think they are needed, though
+              I
               may add them later.</li>
-            <li>The Home, End, Right, and Left Arrow keys (<em>navigation keys</em>) are functional. However, the Home key
+            <li>The Home, End, Right, and Left Arrow keys (<em>navigation keys</em>) are functional. However, the Home
+              key
               takes you to the beginning
               of the text area, as opposed to the beginning of each line. The End key takes you to the end of the text
               area instead of the end of each line.</li>
@@ -133,13 +145,15 @@
               other capital letters.</li>
             <li><strong>Tip</strong>: I highly recommend that you add the Grammarly Chrome
               extension to your browser. It will put a red underline under spelling and grammar errors in the text box.
-              Just click the suggested replacement to make the change. Or click 'Dismiss' to remove the red highlighting.
+              Just click the suggested replacement to make the change. Or click 'Dismiss' to remove the red
+              highlighting.
             </li>
           </ul>
           <hr />
 
           <h3>Downloading the app to a desktop or laptop</h3>
-          <p>This app/tool will go away at some point. So download it or lose it! All you need to do is download the files
+          <p>This app/tool will go away at some point. So download it or lose it! All you need to do is download the
+            files
             and open <code>index.html</code> to start using the app.</p>
           <p>The keyboard and words are for an American English keyboard. I hope to have other language options in the
             future. If you would like to download the files and start using the app, then follow these steps: Go to my
@@ -164,7 +178,7 @@
         </ul>
       </div>
       <hr />
-      <p class="copyright">&copy; 2021-2023 James Kernicky</p>
+      <p class="copyright">&copy; 2021-2024 James Kernicky</p>
     </div>
   </footer>
 
